# MPSTools

./: .buildinfo  .gitignore  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  README.rst  code.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  sg_execution_times.html
.github/workflows/: deploy_workflow.yml
MPSTools/fiber_catalogue/: loader.py  toolbox.py
MPSTools/fiber_catalogue/fiber_files/: test_multimode_fiber.yaml
MPSTools/tools/: coordinates.py
_sources/: code.rst.txt
_sources/gallery/: index.rst.txt
docs/examples/: plot_multi_axes.py
docs/source/: conf.py
docs/source/gallery/: index.rst  plot_FillLine.ipynb  plot_FillLine.py  plot_FillLine.py.md5  plot_FillLine.rst  plot_FillLine_codeobj.pickle  plot_Line.rst  plot_Line_codeobj.pickle  plot_STDLine.rst  plot_STDLine_codeobj.pickle  plot_contour.rst  plot_contour_codeobj.pickle  plot_mesh.ipynb  plot_mesh.py  plot_mesh.py.md5  plot_mesh.rst  plot_mesh_2.ipynb  plot_mesh_2.py  plot_mesh_2.py.md5  plot_mesh_2.rst  plot_mesh_2_codeobj.pickle  plot_mesh_codeobj.pickle  plot_multi_axes.ipynb  plot_multi_axes.py.md5  plot_multi_axes.rst  plot_multi_axes_codeobj.pickle  plot_patch.ipynb  plot_patch.py  plot_patch.py.md5  plot_patch.rst  plot_patch_codeobj.pickle  plot_scatter.rst  plot_scatter_codeobj.pickle  sg_execution_times.rst
gallery/: index.html  sg_execution_times.html
requirements/: requirements-development.txt  requirements-documentation.txt  requirements.txt
