[metadata]
name = MPSTools
description = Personal toolbox.
version = file: MPSTools/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/MPSTools
license = MIT
license_file = LICENSE
readme = README.rst
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 3 - Alpha
        Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = true
packages=find:
python_requires >= 3.7

setup_requires =
        setuptools

install_requires = file: requirements/requirements.txt

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605

[tool:pytest]
minversion = 6.0
addopts = -ra -q -v
testpaths = tests

[sdist]
formats = zip, gztar

[options.extras_require]
development = file: requirements/requirements-development.txt
documentation = file: requirements/requirements-documentation.txt
testing = file: requirements/requirements-testing.txt